Edited wiki page PageName through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -36,11 +36,11 @@ Here an example of how to use MIscore to obtaing a confidence score for a molecu
 
 == Source code ==
 ==== Check out ====
-====== miscore ======
+===== miscore =====
 {{{
 svn export https://miscore.googlecode.com/svn/trunk/miscore miscore
 }}}
-====== miscore-example ======
+===== miscore-example =====
 {{{
 svn export https://miscore.googlecode.com/svn/trunk/miscore-example miscore-example
 }}}
